[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Phase H wires czsc-python (Rust workspace) as the producer of the
# czsc._native extension. The python-source = "." tells maturin to copy
# the existing pure-Python czsc/ tree alongside the compiled extension
# into the wheel.
module-name      = "czsc._native"
manifest-path    = "crates/czsc-python/Cargo.toml"
python-source    = "."
include          = ["czsc/**/*.pyi", "czsc/py.typed"]
features         = ["pyo3/extension-module"]


[project]
name = "czsc"
# 单一版本源：Cargo.toml [workspace.package].version。
# maturin 1.7+ 在 dynamic = ["version"] 下会自动把 Cargo.toml 的 version
# 注入到 wheel metadata，避免 Python/Rust 两侧版本漂移。
dynamic = ["version"]
description = "缠中说禅技术分析工具"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "zengbin93", email = "zeng_bin8888@163.com" }
]
keywords = ["缠论", "技术分析", "A股", "期货", "缠中说禅", "量化", "QUANT", "程序化交易"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    # 核心数据处理
    "pandas>=1.0.0",
    "numpy",
    "pyarrow",
    "openpyxl",
    "polars>=0.20.0",
    # 网络请求（czsc.fsa 飞书 API 封装使用）
    "requests>=2.24.0",
    "requests_toolbelt",
    # 数学计算和统计
    "scipy",
    "statsmodels",
    "scikit-learn",
    # 技术分析
    # - czsc._native 由 crates/czsc-python 通过 maturin 直接产出，无需 rs-czsc
    # - wbt 为硬依赖，提供 WeightBacktest / daily_performance / top_drawdowns / mock 等
    # - talib-rs 为 TA-Lib 的纯 Rust 替代（drop-in 兼容），仅用于 tests/unit/test_ta_parity.py
    #   做与 czsc._native.ta 的 parity 校验；运行时代码不再依赖 C TA-Lib
    "wbt",
    "talib-rs",
    # 图表和可视化
    "matplotlib",
    "seaborn",
    "plotly",
    "streamlit",
    # 工具库
    "tqdm>=4.66.4",
    "loguru",
    "dill",
    "tenacity",
]

[[tool.uv.index]]
url = "https://pypi.python.org/simple"
default = true

[project.optional-dependencies]
# 测试依赖
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# 开发工具
dev = [
    "ipython",
    "jupyter",
]

# 版本管理工具
release = [
    "twine",
    "build",
]

# 完整开发环境（包含测试和开发工具）
all = [
    "czsc[test,dev,release]",
]

[project.urls]
Homepage = "https://github.com/waditu/czsc"
Repository = "https://github.com/waditu/czsc"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "tushare>=1.4.24",
    "ruff>=0.9.0",
    "basedpyright>=1.28.0",
    "maturin>=1.13.1",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -v -s --log-cli-level=INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning:.*'T' is deprecated.*",
    "ignore::RuntimeWarning:.*invalid value encountered in divide.*",
]

[tool.ruff]
line-length = 120
# Auto-generated by pyo3-stub-gen — its formatter is authoritative
# (CI's stub-drift check regenerates and asserts no diff). Excluded from
# both lint and format so we don't fight the generator.
extend-exclude = ["czsc/_native/__init__.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501", "SIM112"]
extend-safe-fixes = ["UP"]

[tool.ruff.lint.isort]
known-first-party = ["czsc"]

[tool.ruff.format]
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
exclude = ["examples/", "test_offline/", "docs/", "old/", "build/", "dist/", ".venv/"]
reportMissingTypeStubs = false
