[package]
name        = "czsc-utils"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
description = "CZSC utilities — BarGenerator, freq calendar, is_trading_time. Placeholder, to be migrated."

[lib]
name = "czsc_utils"
path = "src/lib.rs"

[dependencies]
anyhow         = "1"
chrono         = { workspace = true }
czsc-core      = { path = "../czsc-core" }
error-macros   = { path = "../error-macros" }
error-support  = { path = "../error-support" }
hashbrown      = { workspace = true }
once_cell      = "1"
parking_lot    = "0.12"
polars         = { workspace = true, features = ["ipc", "partition_by"] }
serde          = { workspace = true }
thiserror      = "2"
pyo3           = { workspace = true, optional = true, features = ["chrono"] }
pyo3-stub-gen  = { version = "0.12", optional = true }

[features]
python = ["pyo3", "pyo3-stub-gen"]

[dev-dependencies]
chrono = { workspace = true }
polars = { workspace = true }
anyhow = "1"
