[package]
name                    = "czsc-utils"
version.workspace       = true
edition.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
authors.workspace       = true
keywords.workspace      = true
categories.workspace    = true
readme                  = "README.md"
description             = "Utilities of the czsc framework (most users should depend on the `czsc` facade instead): BarGenerator, frequency calendar, trading-time helpers."

[lib]
name = "czsc_utils"
path = "src/lib.rs"

[dependencies]
anyhow         = "1"
chrono         = { workspace = true }
czsc-core      = { workspace = true }
czsc-derive    = { workspace = true }
hashbrown      = { workspace = true }
once_cell      = "1"
parking_lot    = "0.12"
polars         = { workspace = true, features = ["ipc", "partition_by"] }
serde          = { workspace = true }
thiserror      = "2"
pyo3           = { workspace = true, optional = true, features = ["chrono"] }
pyo3-stub-gen  = { version = "0.12", optional = true }

[features]
python = ["pyo3", "pyo3-stub-gen"]

[dev-dependencies]
chrono = { workspace = true }
polars = { workspace = true }
anyhow = "1"
