[package]
name        = "error-support"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Common error types for the czsc Rust workspace. Placeholder, to be migrated."

[lib]
name = "error_support"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
